# bubble-shooter

./: CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp
src/board/: CMakeLists.txt  board.cpp  board.hpp
src/board/include/: board.hpp
src/board/src/: board.cpp
src/board/test/: CMakeLists.txt  board_test.cpp
src/include/: game_settings.hpp
src/projectile/: CMakeLists.txt
src/projectile/include/: collision.hpp  geometry.hpp  projectile.hpp  trajectory.hpp
src/projectile/src/: collision.cpp  projectile.cpp  trajectory.cpp
src/projectile/test/: CMakeLists.txt  projectile_test.cpp  projectile_trajectory_test.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/: sdl2_renderer.hpp
src/renderer/src/: sdl2_renderer.cpp
utils/: CMakeLists.txt
utils/bubble/: CMakeLists.txt
utils/bubble/include/: bubble_color.hpp
utils/bubble/src/: bubble_color.cpp
utils/bubble/test/: CMakeLists.txt  bubble_color_test.cpp
utils/level_menu/: CMakeLists.txt
utils/level_menu/include/: level_menu.hpp
utils/level_menu/src/: level_menu.cpp
